syntax = "proto3";

package sum;

option go_package ="./proto";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 result =1;
}

service SumService {
    rpc Sum(SumRequest) returns (SumResponse);
}


// Generate code: $ protoc -Igreet/proto --go_out=. --go_opt=paths=import --go-grpc_out=. greet/proto/greet.proto
